[tool.poetry]
name = "wasmbind"
version = "0.2.1"
description = ""
authors = ["Michael Elsdörfer <michael@elsdoerfer.info>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
wasmer = "^0.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
