[tool.poetry]
name = "wasmbind"
version = "0.4"
description = ""
readme = "README.md"
authors = ["Michael Elsdörfer <michael@elsdoerfer.info>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
wasmer = "^0.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
